--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sololeveling",
   "version": "0.1.0",
+  "proxy": "http://127.0.0.1:5000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
@@ -10,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "axios": "^0.21.4",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-particles-js": "^3.4.1",
