--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node Backend/server",
     "server": "nodemon Backend/server",
     "client": "npm start --prefix Frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
