--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "react-drag-and-drop": "^3.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
