--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": { "node": "14.17.1", "npm": "6.14.13" },
   "eslintConfig": {
     "extends": [
       "react-app",
