--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-drag-and-drop": "^3.0.0",
     "react-icons": "^4.3.1"
   },
+  "engines": { "node": "14.17.1", "npm": "6.14.13" },
   "devDependencies": {
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.12"
