--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sololeveling",
   "version": "0.1.0",
-  "proxy": "https://sololeveling.herokuapp.com",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
